modificando schema boleta factura y modificaciobes menores pequeños cambios en pedido
